<resources>
    <string name="app_name">ASH PHARMACY</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ASH PHARMACY</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="Items">MEDICINE</string>

    <string name="utitlty">Services</string>

    <string name="menu_home">Home</string>
    <string name="menu_NewItem">New Medicine</string>
    <string name="menu_ItemList">Medicine List</string>

    <string name="menu_Balance">Item Balance</string>
    <string name="menu_SalesNew">New</string>
    <string name="menu_SalesList"> Sales List </string>

    <string name="menu_Profilepharmacy"> Pharmacy Profile </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">FULL MARK PLEASE</string>
    <!-- Strings related to login -->
    <string name="user_name">FULL NAME</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">CREATE ACCOUNT</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="birth_date">Birth Date</string>
    <string name="status_helth">GENDER</string>
    <string name="login_failed">"Login failed"</string>
    <string name ="title_activity_splash_screen" >splash</string>
    <string name="helth1">MALE</string>
    <string name="helth2">FEMALE</string>


    <string name="login">Login</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_first">ActivityFirst</string>
    <string name="title_activity_sing_in">SingIn</string>
    <string name="title_activity_singin">Singin</string>
    <string name="title_activity_user_information">Pharmacist Information</string>


    <string name="Save">ADD</string>

    <string name="Close">CANCEL</string>
    <string name="addnew"> Add New</string>
    <string name="title_activity_main_menu">Pharmacy System</string>
    <string name="title_activity_data">Pharmacy System</string>


    <string name="generalNAme">General Name</string>
    <string name="tradename">Trade Name </string>
    <string name="company">Company</string>
    <string name="category">Category</string>
    <string name="productionDate">Production Date</string>
    <string name="expirationdate">Expiration Date</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="unitsnumber">units Number</string>
    <string name="shelf">shelf</string>

    <string name="Delete">Delete</string>

    <string name="SearchbyCategory">Search Medicine by Category</string>
    <string name="ItemTrans">MEDICIEN UPDATES</string>

    <string name="Date">Date</string>
    <string name="guest_name">TOTAL SALES</string>
    <string name="ItemCount">Count Medicine</string>
    <string name="amount_invoice"> Total Invoice </string>
    <string name="Search"> Search </string>
    <string name="title_activity_item_search">ItemSearch</string>
    <string name="Refresh">Refresh</string>
    <string name="LoadImage">PICK Image</string>

</resources>