<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="2dp"
    >
    <LinearLayout
        android:id="@+id/panel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_margin="1dp"
        android:background="#1FBAA2"
        >

        <TextView
            android:id="@+id/serial_no"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_bold"
            android:gravity="center"
            android:text="N"
            android:textColor="#FFFFFF"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/generalName"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/generalNAme"
            android:fontFamily="@font/font_bold"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
           />


        <TextView
            android:id="@+id/expirationdate"
            android:layout_marginLeft="10dp"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/expirationdate"
            android:fontFamily="@font/font_bold"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            />

        <TextView
            android:id="@+id/price"
            android:layout_marginLeft="10dp"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/price"
            android:fontFamily="@font/font_bold"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            />

    </LinearLayout>
</androidx.cardview.widget.CardView>