<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".medicinelist">

    <LinearLayout
        android:id="@+id/heder_menu"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"

        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#1FBAA2"
            android:orientation="horizontal"

            >


            <TextView
                android:id="@+id/invoice_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/font_bold"
                android:text="@string/Items"
                android:textColor="@color/white"
                android:textSize="20sp" />


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/panel1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:background="#1FBAA2"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/serial_no"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_bold"
            android:gravity="center"
            android:text="#"
            android:textColor="#FFFFFF"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/generalName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:fontFamily="@font/font_bold"
            android:text="@string/generalNAme"
            android:textColor="#FFFFFF"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/expirationdate"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/font_bold"
            android:text="@string/expirationdate"
            android:textColor="#FFFFFF"
            android:backgroundTint="@color/white"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/price"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/font_bold"
            android:text="@string/price"
            android:textColor="#FFFFFF"
            android:textSize="20sp"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ListItem"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/panel1"
        android:layout_marginTop="10dp"


        />


</RelativeLayout>