<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewmedFrag"
    android:background="#1FBAA2"
    >

    <LinearLayout
        android:id="@+id/panel1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_regular"
            android:text="@string/Items"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/panelImage"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_below="@+id/panel1"
        android:layout_marginTop="0dp"
        android:gravity="left"
        android:orientation="horizontal"
        android:visibility="visible">

        <Button
            android:id="@+id/btnLoadImg"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginRight="20dp"
            android:layout_gravity="center"
            android:text="@string/LoadImage"
            android:layout_marginLeft="20dp"
            android:backgroundTint="#228071"
            >


        </Button>

        <ImageView
            android:id="@+id/img"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="#C2EAEA"
            android:scaleType="fitXY"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/panelid"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@+id/panelImage"
        android:layout_marginTop="30dp"
        android:gravity="left"
        android:orientation="horizontal"
        android:visibility="invisible">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/font_regular"
            android:text="@string/Items"
            android:textColor="#000"
            android:textSize="20sp"
            android:textStyle="bold"

            android:visibility="invisible"></TextView>

        <EditText
            android:id="@+id/itemID"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/border2"
            android:enabled="false"
            android:visibility="invisible">

        </EditText>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/panel2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/panelid"
        android:gravity="left"
        android:layout_marginTop="2dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/font_regular"
            android:text="@string/generalNAme"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            />
        <EditText
            android:id="@+id/generalName"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="#C2EAEA">

        </EditText>


    </LinearLayout>



    <LinearLayout
        android:id="@+id/panel3"
        android:layout_below="@+id/panel2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="left"
        android:layout_marginTop="5dp"
        >
        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="Trade name"
            android:fontFamily="@font/font_regular"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="20dp"

            />

        <EditText
            android:id="@+id/tradename"
            android:layout_width="200dp"
            android:background="#C2EAEA"
            android:layout_height="wrap_content">

        </EditText>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/panel4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/panel3"
        android:layout_marginTop="5dp"
        android:gravity="left"
        android:orientation="horizontal">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/font_regular"
            android:text="@string/company"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/company"
            android:layout_width="200dp"
            android:layout_height="25sp"
            android:background="@drawable/border2">
        </Spinner>


    </LinearLayout>
    <LinearLayout
        android:id="@+id/panel5"
        android:layout_below="@+id/panel4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="left"
        android:layout_marginTop="5dp"
        >
        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:fontFamily="@font/font_regular"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="20dp"
           />

        <Spinner

            android:id="@+id/category"
            android:layout_width="200dp"
            android:background="@drawable/border2"
            android:layout_height="25sp">

        </Spinner>


    </LinearLayout>
    <LinearLayout
        android:id="@+id/panel6"
        android:layout_below="@+id/panel5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="left"
        android:layout_marginTop="5dp"
        >
        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/productionDate"
            android:fontFamily="@font/font_regular"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="20dp"

            />

        <EditText
            android:id="@+id/productionDate"
            android:layout_width="200dp"
            android:background="#C2EAEA"
            android:layout_height="wrap_content"
            android:inputType="date"
            >
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/panel_6"
        android:layout_below="@+id/panel6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="left"
        android:layout_marginTop="5dp"
        >
        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/expirationdate"
            android:fontFamily="@font/font_regular"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="20dp"

            />

        <EditText
            android:id="@+id/expirationdate"
            android:layout_width="200dp"
            android:background="#C2EAEA"
            android:layout_height="wrap_content"
            android:inputType="date"
            >
        </EditText>

    </LinearLayout>




    <LinearLayout
        android:id="@+id/panelprice"
        android:layout_below="@+id/panel_6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="left"
        android:layout_marginTop="5dp"
        >
        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:fontFamily="@font/font_regular"
            android:textSize="20sp"
            android:textColor="#FFFFFF"

            android:textStyle="bold"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="20dp"

            />

        <EditText
            android:id="@+id/price"
            android:layout_width="200dp"
            android:background="#C2EAEA"
            android:layout_height="wrap_content"
            android:inputType="number"

            >

        </EditText>


    </LinearLayout>



    <LinearLayout
        android:id="@+id/paneldescreption"
        android:layout_below="@+id/panelprice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="left"
        android:layout_marginTop="5dp"
        >
        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:fontFamily="@font/font_regular"
            android:textSize="20sp"
            android:textColor="#FFFFFF"

            android:textStyle="bold"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="20dp"

            />

        <EditText
            android:id="@+id/descreption"
            android:layout_width="200dp"
            android:background="#C2EAEA"
            android:layout_height="wrap_content">

        </EditText>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/panelunit"
        android:layout_below="@+id/paneldescreption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="left"
        android:layout_marginTop="5dp"
        >
        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/unitsnumber"
            android:fontFamily="@font/font_regular"
            android:textSize="20sp"
            android:textColor="#FFFFFF"

            android:textStyle="bold"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="20dp"

            />

        <EditText
            android:id="@+id/unitsnumber"
            android:layout_width="200dp"
            android:background="#C2EAEA"
            android:layout_height="wrap_content"
            android:inputType="number"
            >

        </EditText>


    </LinearLayout>


    <LinearLayout
        android:id="@+id/panelshelf"
        android:layout_below="@+id/panelunit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="left"
        android:layout_marginTop="5dp"
        >
        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/shelf"
            android:fontFamily="@font/font_regular"
            android:textSize="20sp"
            android:textColor="#FFFFFF"

            android:textStyle="bold"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="20dp"

            />

        <EditText
            android:id="@+id/shelf"
            android:layout_width="200dp"
            android:background="#C2EAEA"
            android:layout_height="wrap_content">

        </EditText>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/panelshelf"
        android:layout_marginTop="21dp"
        android:gravity="center_horizontal"
        >


        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_password"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"


            android:layout_gravity="center"
            android:backgroundTint="#228071"
            android:fontFamily="@font/font_bold"
            android:padding="5dp"
            android:text="@string/Save"
            android:textColor="#fff"
            android:textSize="15dp" />

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_password"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="#228071"
            android:fontFamily="@font/font_bold"
            android:padding="5dp"
            android:text="@string/Delete"
            android:textSize="15dp" />

        <Button
            android:id="@+id/btn_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_password"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:backgroundTint="#228071"
            android:fontFamily="@font/font_bold"
            android:padding="5dp"
            android:text="@string/Close"
            android:textColor="#fff"
            android:textSize="15dp" />
    </LinearLayout>

</RelativeLayout>