<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment"
    android:background="#1FBAA2"
    >

    <LinearLayout
        android:id="@+id/heder2"
        android:layout_width="333dp"
        android:layout_height="599dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="3dp"
        android:gravity="center_vertical">
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="50dp"
                android:layout_marginTop="50dp"

                >


                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:scaleType="fitXY"
                    android:src="@drawable/logo"
                    android:layout_marginTop="25sp"


                    />


                <EditText
                    android:id="@+id/user_name"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_below="@+id/logo"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="10dp"
                    android:drawableLeft="@drawable/ic_user_logo"
                    android:fontFamily="@font/font_bold"
                    android:gravity="left"
                    android:hint="@string/user_name"
                    android:inputType="text"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FFFFFF"
                    android:textSize="15dp" />

                <EditText
                    android:id="@+id/user_password"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_below="@+id/user_name"

                    android:layout_centerInParent="true"
                    android:layout_marginTop="20dp"
                    android:drawableLeft="@drawable/ic_lock_icon"
                    android:fontFamily="@font/font_bold"
                    android:gravity="left"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FFFFFF"
                    android:textSize="15dp" />

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/user_password"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="#228071"
                    android:fontFamily="@font/font_bold"
                    android:padding="5dp"
                    android:text="@string/login"
                    android:textColor="#fff"
                    android:textSize="20dp" />

                <Button
                    android:id="@+id/singIn"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/btn_login"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="30dp"
                    android:backgroundTint="#228071"
                    android:fontFamily="@font/font_bold"
                    android:text="@string/action_sign_in"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </RelativeLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>


</RelativeLayout>